Android build -> 引入Gradle

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Assets/SdkManager"]
 	path = Assets/SdkManager
 	url = https://github.com/xclouder/SdkManager.git
+[submodule "Assets/Editor/STTool"]
+	path = Assets/Editor/STTool
+	url = https://github.com/xclouder/STTool.git
