--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Assets/Editor/STTool"]
 	path = Assets/Editor/STTool
 	url = https://github.com/xclouder/STTool.git
+[submodule "Assets/Editor/xClouderSearch"]
+	path = Assets/Editor/xClouderSearch
+	url = https://github.com/xclouder/xcloudersearch.git
